fix overflowing slide gallery on mobile

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -163,6 +163,10 @@ li {
   max-width: none;
 }
 
+.wp-block-jetpack-slideshow {
+  max-width: 80vw;
+}
+
 a {
   color: #344da1;
 }
